--- a/detail.html
+++ b/detail.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Pokemon</title>
 
     <!-- Normalize.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +19,20 @@
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
-<body>
-    <section class="content">
-        <button class="go-back" onclick="history.back()">&lt;&lt; Voltar</button>
 
-        <div class="pokemon-detail">
-            <span class="number">#001</span>
-            <span class="name">bulbasaur</span>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="">
-            <span class="type grass">grass</span>
+<body>
+    <div class="content-detail">
+        <div class="bg-half-circle"></div>
+        <div id="pokemon" class="pokemon-detail">
+            <header>
+                <div class="first-line">
+                    <button class="go-back" onclick="history.back()">&lt;&lt; Voltar</button>
+                </div>
+                <span class="name">bulbasaur <span class="number">#001</span></span>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="">
+                <span class="type grass">grass</span>
+            </header>
 
             <div class="info">
                 <ol class="stats">
@@ -46,10 +54,11 @@
                 </ol>
             </div>
         </div>
-    </section>
+    </div>
 
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <!-- <script src="/assets/js/pokemon-detail.js"></script> -->
 </body>
+
 </html>
