feat: Finalizado: Página de detalhes carregando os dados da API

--- a/detail.html
+++ b/detail.html
@@ -22,43 +22,13 @@
 
 <body>
     <div class="content-detail">
-        <div class="bg-half-circle"></div>
         <div id="pokemon" class="pokemon-detail">
-            <header>
-                <div class="first-line">
-                    <button class="go-back" onclick="history.back()">&lt;&lt; Voltar</button>
-                </div>
-                <span class="name">bulbasaur <span class="number">#001</span></span>
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                    alt="">
-                <span class="type grass">grass</span>
-            </header>
-
-            <div class="info">
-                <ol class="stats">
-                    <li class="stat">
-                        hp: <progress class="stat-low" max="100" value="45">45</progress>
-                    </li>
-                    <li class="stat">
-                        attack: <progress class="stat-low" max="100" value="49">49</progress>
-                    </li>
-                    <li class="stat">
-                        defense: <progress class="stat-low" max="100" value="49">49</progress>
-                    </li>
-                    <li class="stat">
-                        special-attack: <progress class="stat-high" max="100" value="65">65</progress>
-                    </li>
-                    <li class="stat">
-                        speed: <progress class="stat-low" max="100" value="45">45</progress>
-                    </li>
-                </ol>
-            </div>
         </div>
     </div>
 
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
-    <!-- <script src="/assets/js/pokemon-detail.js"></script> -->
+    <script src="/assets/js/pokemon-detail.js"></script>
 </body>
 
 </html>
